--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-DB_MY_NAME
-DB_MY_CITY
-DB_MY_LANGUAGE
+DB_MY_NAME=name of the user
+DB_MY_CITY= city of the user
+DB_MY_LANGUAGE= language of the user
